# pod-kast-rust

./: .gitignore  Cargo.toml  README.1.md  README.md  channel.json  episodes.xml  log.txt  log2.txt  logging_config.yaml  pandoc.sh  pod-kast.1  pod-kast.man  pod-kast.troff  podcast.json  xml.txt  xml2.txt
src/: main-old.rs  main.rs
src/api/: api-bad.rs  api-listening.rs  api-not.rs  api-temp.rs  api.rs  retrieve.rs
src/assets/: pc_skel.sql  pod-kast.db
src/config/: config.rs  log_info.rs
src/data/: category.old.0.rs  category.old.1.rs  category.rs  context.rs  data.rs  episode.rs  podcast.rs
src/menu/: category_menu.rs  menu_entry.rs  podcast_menu.rs  screen.rs  simple_menu.rs  simple_menu2.rs
src/utilities/: utilities.rs
