[package]
name = "pod-kast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "*", features = ["bundled","chrono"] }
chrono = "0.4"
home = "0.5.3"
whoami = "1.2.1"
toml = "0.5.8"
termsize = "0.1"
rss = "2.0"
regex = "1"
log = "0.4.14"
simple_logger = "2.1.0"
dialoguer = "0.9.0"


[dev-dependencies]
httpmock = "0.6"


