[package]
name = "pod-kast"
version = "0.8.0"
edition = "2021"
description = "This is an intended to be a podcast retrieval program specifically written for blind users that entirely rely on a command line screen reader and interface."
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "*", features = ["bundled","chrono"] }
chrono = "0.4"
home = "0.5.3"
whoami = "1.2.1"
toml = "0.5.8"
termsize = "0.1"
rss = "2.0.4"
regex = "1"
log = "0.4.14"
# simple_logger = "2.1.0" #maybe no
# dialoguer = "0.9.0" #maybe no
systemd-journal-logger = "=0.3.1" #maybe no
rustyline = "11.0.0"
log4rs = { version = "1.2.0", features = ["gzip"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
byte-unit = "4.0.19"


[dev-dependencies]
httpmock = "0.6"

[package.metadata.deb]
maintainer = "Marc Lytle <mlytle@gmail.com>"
copyright = "2023, 2023 <mlytle@gmail.com>"
assets = [
    ["target/release/pod-kast", "usr/bin/", "755"],
    ["README.1.md", "usr/share/doc/cargo-deb/README", "644"],
    ["pod-kast.1", "usr/local/share/man/man1/", "644"]
]


